feat: Pipeline optimization v2.0 - Complete refactoring
- Added centralized configuration system (config.py) with environment variables
- Fixed critical bug: nom_commum  nom_commun in validate.py
- Added comprehensive French documentation (DOCUMENTATION_TECHNIQUE.txt)
- Optimized all modules with detailed French comments and docstrings
- Updated requirements.txt with version pinning
- Added .gitignore for docs/, .venv/, and generated data
- Created docs/ folder structure for local documentation
- Fixed import errors and added editor configuration (pyrightconfig.json)
- All modules now use absolute imports instead of relative imports

Breaking changes:
- Configuration now uses .env file (see .env.example)
- API URL and timeouts are now configurable

Co-authored-by: AI Assistant <assistant@gemini.google.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
-pandas
-requests
-tqdm
-unidecode
-pydantic
+# ============================================
+# DÉPENDANCES DU PIPELINE ANIMALIA
+# ============================================
+# Versions spécifiées pour assurer la reproductibilité
+
+# Manipulation de données
+pandas>=2.0.0,<3.0.0
+
+# Requêtes HTTP
+requests>=2.31.0,<3.0.0
+
+# Barre de progression
+tqdm>=4.65.0,<5.0.0
+
+# Normalisation de texte (accents, caractères spéciaux)
+unidecode>=1.3.6,<2.0.0
+
+# Validation de données
+pydantic>=2.0.0,<3.0.0
+
+# Gestion des variables d'environnement
+python-dotenv>=1.0.0,<2.0.0
